# Adafruit_lgpio

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  lgpio.i  lgpio_extra.py  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  pre-commit.yml
.reuse/: dep5
